# khanlab.github.io

./: .gitignore  404.html  CNAME  Gemfile  README.md  REPLACE_PHOTOS_NOW.md  _config.yml  contact.html  get_publications.ipynb  index.html  join.html  platform.html  pubs.html  pyproject.toml  requirements.txt  robots.txt  seminars.html
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: grab_articles.yml
_data/: navigation.yml
_data/contact/: contact.yml  info.yml
_data/index/: funding.yml  research.yml
_data/join/: grad.yml  internship.yml  postdoc.yml  undergrad.yml
_data/publications/: publications.csv
_data/seminars/: archive.yml  info.yml  upcoming.yml
_includes/: footer.html  navigation.html
_includes/index/: news.html  publications.html  research.html
_includes/people/: alumni.html  collaborator.html  current.html  exec.html  staff.html  team.html  trainee.html
_layouts/: base.html  post.html
assets/css/: base.css  contact.css  fallback.css  index.css  join.css  people.css  platform.css  pubs.css  seminars.css  template.css
assets/js/: custom.js
js/: custom.js
news/_drafts/: year-mo-dy-title.md
news/_posts/: 2021-05-22-test-article-title.md  2021-08-30-unfold-hipp.md  2021-09-20-new-website.md  2025-06-23-mind-launch.md
people/: people.html
people/_drafts/: 0000-pos-01-first-last_template.md
people/_posts/: 0000-01-01-ali-khan.md  0000-01-02-corey-baron.md  0000-01-02-marco-prado.md  0000-01-03-ravi-menon.md  0000-01-04-taylor-schmitz.md  0000-01-07-vania-prado.md  (+74 more)
software/: software.html
(+6 files in other folders)
