[tool.poetry]
name = "khanlab.github.io"
version = "1.0.0"
description = "Khan Computational Imaging Lab website"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
biopython = "^1.78"
jupyter = "^1.0"
pandas = "^1.2"
papermill = "~2.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
